Fix a layout bug for attachment pages on narrow screens

--- a/style.css
+++ b/style.css
@@ -407,7 +407,8 @@ a img.alignleft {
 	.thumbnails [class*="span"] {
 		width: 21%;
 	}
-	.sidebar-content #primary {
+	.sidebar-content #primary,
+	.sidebar-content #attachment-comment {
 		float: none;
 		margin: inherit;
 	}
